--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,6 +2,11 @@ h2
   | Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
+
+  .field
+    = f.label :name
+    br
+    = f.text_field :name, autofocus: true
   .field
     = f.label :email
     br
@@ -18,4 +23,8 @@ h2
 
   .actions
     = f.submit "Sign up"
+
+br
+= link_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook)
+br
 = render "devise/shared/links"
