--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "theme_2";
+@import "theme1";
 
-.bold {
-	font-weight: bold;
+table {
+	width: 1000px;
 }
