--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,30 +1,24 @@
-h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
+.container
+  .col-md-4.col-md-offset-4
+    h2
+      | Sign Up
 
-  .field
-    = f.label :name
     br
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @validatable
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
+    form
+      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = devise_error_messages!
 
-  .actions
-    = f.submit "Sign up"
+        = f.input :name
 
-br
-= link_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook)
-br
-= render "devise/shared/links"
+        = f.input :email
+        
+        = f.input :password
+
+        
+        br
+        = f.submit "Sign up", class:"btn btn-success"
+
+        = button_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook), class:"btn btn-primary"
+        br
+        br
+        = render "devise/shared/links"
