--- a/app/views/home/dashboard.html.slim
+++ b/app/views/home/dashboard.html.slim
@@ -6,9 +6,11 @@ br
 br
 |Instructions <br/> ....<br/> ....
 br
+
 br
-=button_to 'See current progress', progress_path, method: :get if current_user.answers.count != 0
+-if current_user.answers.count == 0
+	=button_to 'Take Test', test_path, method: :get, class:'btn btn-primary'
+-else
+	=button_to 'Continue Test', test_path, method: :get, class:'btn btn-primary'
 br
-=button_to 'Take Test', test_path, method: :get
-br
-=link_to 'Logout', destroy_user_session_path, method: :delete
+=button_to 'See current progress', progress_path, method: :get, class:'btn btn-info' if current_user.answers.count != 0
