--- a/app/views/home/progress.html.slim
+++ b/app/views/home/progress.html.slim
@@ -1,20 +1,36 @@
 h2
 	|Current Progress
 
-|Correct Answers: 
-= current_user.correct_answer_count
-br
-|Wrong Answers: 
-= current_user.wrong_answer_count
-br
-|Passed Answers: 
-= current_user.passed_answer_count
-br
-br
 
-- current_user.answers.each do |a|
-	li 
-		=link_to "Question #{a.question.id}", result_path(answer_id: a.id)
-		br
-br
-= link_to "Dashboard", dashboard_path
+.progress
+  .progress-bar.progress-bar-success style=("width: #{correct_answer_ratio}%") 
+  .progress-bar.progress-bar-danger style=("width: #{wrong_answer_ratio}%") 
+
+
+
+
+table.table.table-striped.table-hover
+  thead
+    tr
+      th #
+      th Question
+      th Correct Answer
+      th Your Answer
+  tbody
+  	- current_user.answers.each do |a|
+  		- if a.correct?
+		    tr.success
+				td =a.question.id
+		    	td =a.question.body
+		    	td =a.question.answer
+		    	td =a.body
+		- else
+			tr.danger
+				td <a href="#{result_path(answer_id: a.id)}" class="btn btn-link" style="display: block;">#{a.question.id}</a>
+				td =a.question.body
+				td =a.question.answer
+				td =a.body
+
+
+
+
