--- a/app/views/home/test.html.slim
+++ b/app/views/home/test.html.slim
@@ -4,7 +4,7 @@ h2
 
 =simple_form_for @answer, url: answers_path(question_id: @question) do |f| 
   =f.input :body , label: false
-  =f.submit "Submit Answer"
-  =f.button :button, "Pass Question", url: answers_path(question_id: @question, passed: true)
-br
-= link_to "Dashboard", dashboard_path
+  =f.submit "Submit Answer",class:'btn btn-success'
+  br
+  =f.button :button, "Pass Question", url: answers_path(question_id: @question, passed: true),class:'btn btn-primary'
+
