--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,8 @@ html
     = csrf_meta_tags
 
   body
-    == render 'shared/navigation'
+    = render 'shared/navigation'
+
     = yield
     p.notice
       = notice
