--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -6,7 +6,8 @@
     br
     form
       = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
+      
+        = f.error_notification
 
         = f.input :name
 
