--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,19 @@ html
     = render 'shared/navigation'
 
     = yield
-    p.notice
-      = notice
-    p.alert
-      = alert
+
+    -flash.each do |key, value|
+      div class="alert alert-#{key}"
+        =value
+
+    - if flash[:notice]
+      .alert.alert-success
+       = flash[:notice]
+
+    - if flash[:alert]
+      .alert.alert-danger
+        = flash[:alert]
+
+    - if flash[:error]
+      .alert.alert-danger
+        = flash[:error]
