--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -4,9 +4,8 @@
       | Sign Up
 
     br
-    form
-      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+
         = f.error_notification
 
         = f.input :name
@@ -14,12 +13,9 @@
         = f.input :email
         
         = f.input :password
-
         
-        br
-        = f.submit "Sign up", class:"btn btn-success"
+        = f.button :submit, "Sign up", class:"btn btn-success", method: :post
 
-        = button_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook), class:"btn btn-primary"
-        br
-        br
-        = render "devise/shared/links"
+
+    = button_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook), class:"btn btn-primary"
+    = render "devise/shared/links"
