--- a/app/views/images/_image.html.slim
+++ b/app/views/images/_image.html.slim
@@ -1,4 +1,5 @@
-= image_tag image.file.url(:thumb)
+= image_tag image.file.url(:thumb), style:"margin-left:auto; margin-right:auto;"
 /= image_tag image.file.s_1000_width
+br
 br
 br
