--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,5 +1,5 @@
 
-.navbar.navbar-default
+.navbar.navbar-default.navbar-fixed-top
 	.container 
 
 	    .navbar-header 
@@ -16,7 +16,9 @@
 			-else
 				li = link_to 'Sign Up', new_user_registration_path, method: :get
 				li = link_to 'Sign In', new_user_session_path, method: :get
-
+br
+br
+br
 
 
 
