--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,21 +1,27 @@
-.container
-  .col-md-4.col-md-offset-4
-    h2
-      | Sign Up
+br
+br
+br
+br
+.container.col-md-6.col-md-offset-3.jumbotron.text-center
+    .container.col-md-10.col-md-offset-1
+        h2 style="font-size:300%;"
+          | Sign up
 
-    br
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        br
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
 
-        = f.error_notification
+            = f.error_notification
 
-        = f.input :name
+            = f.input :name, label:false, placeholder: "Name"
 
-        = f.input :email
-        
-        = f.input :password
-        
-        = f.button :submit, "Sign up", class:"btn btn-success", method: :post
+            = f.input :email, label:false, placeholder: "Email"
+            
+            = f.input :password, label:false, placeholder: "Password"
+            br
+            br
+            = f.button :submit, "SIGN UP", class:"btn btn-success", method: :post
+            br
+            br
+        = button_to "FACEBOOK SIGN UP", user_omniauth_authorize_path(:facebook), class:"btn btn-primary"
+        = render "devise/shared/links"
 
-
-    = button_to "Facebook Sign Up", user_omniauth_authorize_path(:facebook), class:"btn btn-primary"
-    = render "devise/shared/links"
