Simple form reinstalled with bootstrap

--- a/app/views/home/dashboard.html.slim
+++ b/app/views/home/dashboard.html.slim
@@ -12,7 +12,12 @@ br
 
 		br
 		br
-		|Instructions <br/> ....<br/> ....
+		|Instructions 
+		ul
+			li
+		 		|still have to figure out a 
+			li
+				|good way for diaplaying these
 		br
 
 		br
