--- a/app/views/home/test.html.slim
+++ b/app/views/home/test.html.slim
@@ -1,15 +1,25 @@
 / h1 style="font-size:40px;"
 / 	|TEST
 br
+	
+/ h1.text-center.text-primary 
+/ 	-if @wrong_answer == true
+/ 		|Try again
+
 == render 'home/question'
 
-.container.col-md-8.col-md-offset-2.text-center
+.container.col-md-8.col-md-offset-2.text-center id="answer_feedback"
+	br
+	=simple_form_for Answer.new, url: answers_path(question_id: @question), remote:true do |f|
 
-	=simple_form_for @answer, url: answers_path(question_id: @question) do |f|
+		div id="answer_area"
+			=f.input :body , label: false, input_html:{style:"width:83% !important; margin-left: 88px; text-align:center;", rows:'1 !important;', class:"input-lg"}, placeholder:'Answer'
 
-		=f.input :body , label: false, input_html:{style:"width:83%; margin-left: 80px; vertical-align:middle;", rows:'1;', },placeholder:'Answer'
 		br
-	 	=f.button :submit, "Submit Answer",class:'btn btn-success'
-	 	br
-	 	=f.button :button, "Pass Question", url: answers_path(question_id: @question, passed: true),class:'btn btn-primary'
+	 	=f.button :submit, "Submit Answer", style:"margin-left: 30px;", class:'btn btn-success btn-lg'
+
+	 	=f.button :button, "Pass Question", url: answers_path(question_id: @question, passed: true), style:'margin-left: 30px;',class:'btn btn-primary btn-lg'
+	br
+	br
+
 
