--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#answer_body{
+  height: 54px !important;
+  width:83% ;
+  margin-left: 88px; 
+  text-align:center;
+  rows: 1;
+}
+
+
