--- a/app/views/answers/_passed_answer.html.slim
+++ b/app/views/answers/_passed_answer.html.slim
@@ -1,7 +1,5 @@
-br
+h1
+	|Correct Answer:
 
-.text-center
-	h1.text-success
-		|Correct Answer!
 br
 = button_to "Continue", test_path, class:'btn btn-success btn-lg', method: :get
