--- a/app/views/answers/wrong_answer.js.erb
+++ b/app/views/answers/wrong_answer.js.erb
@@ -1,2 +1,2 @@
-$('#answer_area').addClass('has-error');
-$('#answer_body').effect('shake', 100000);
+$('#answer_feedback').addClass('has-error');
+$('#answer_body').effect('shake');
